Fixed HTML/CSS errors.

--- a/areaparks.html
+++ b/areaparks.html
@@ -11,7 +11,7 @@
 	
 	<p id="page-title">Area Parks</p>
 	
-	<table align="center">
+	<table class="center">
 		<tr>
 			<td id="navigation">
 				<strong>Navigation</strong><br>
@@ -21,10 +21,9 @@
 				<a href="/about.html">About This Page</a><br>
 			</td>
 			<td>
-				<table id="areaparks" width="600">
-				    <tr>
-				    	<p><strong>Links to my favorite parks surrounding Omaha!</strong></p>
-				    </tr>
+				<td id="areaparks" class="middle">
+					<table>
+				    <tr><strong>Links to my favorite parks surrounding Omaha!</strong></tr>
 				    <tr>
 				        <td><a href="http://www.pottcoconservation.com/parks-and-habitat-areas/hitchcock-nature-center/" target="_blank"><img src="/pictures/hitchcock.jpg" width="250"><br>
 				        Hitchcock Nature Center, IA</a></td>
@@ -41,13 +40,13 @@
 				        <td><a href="http://www.iowadnr.gov/Places-to-Go/State-Parks-Rec-Areas/Iowas-State-Parks/ParkDetails/ParkID/610160" target="_blank"><img src="/pictures/preparation.jpg" width="250"><br>
 				        Preparation Canyon State Park, IA</a></td>
 				    </tr>
-				
-				</table>
+					</table>
+				</td>
 			</td>
 		</tr>
 	</table>
 	
-	<p id="contact" align="center">
+	<p id="contact" class="center">
 		<a href="mailto:jlocatis@gmail.com">Contact Me!</a>
 	</p>
 </body>
