--- a/external-links.html
+++ b/external-links.html
@@ -11,7 +11,7 @@
 	
 	<p id="page-title">External Links</p>
 	
-	<table align="center">
+	<table class="center">
 		<tr>
 			<td id="navigation">
 				<strong>Navigation</strong><br>
@@ -21,17 +21,17 @@
 				<a href="/about.html">About This Page</a><br>
 			</td>
 			<td>
-				<table width="600">
+				<table class="middle">
 				<tr><td>Visit these additional resources for Omaha area hiking:</td></tr>
-				<tr><td><a href="http://parks.cityofomaha.org/" target="_blank"><img src="/pictures/omaha.png" width="300"><br>Omaha Parks & Recreation</a></td></tr>
-				<tr><td><a href="http://councilbluffs-ia.gov/253/Parks-Recreation" target ="_blank"><img src="/pictures/councilbluffs.png" width="300"><br>Council Bluffs Parks & Recreation</a></td></tr>
-				<tr><td><a href="http://www.alltrails.com/" target="_blank"><img src="/pictures/alltrails.png" width="300"><br>All Trails</a> a great resource for all things hiking</td></tr>
+				<tr><td><a href="http://parks.cityofomaha.org/" target="_blank"><img src="/pictures/omaha.png" width="300" alt="Omaha Parks"><br>Omaha Parks & Recreation</a></td></tr>
+				<tr><td><a href="http://councilbluffs-ia.gov/253/Parks-Recreation" target ="_blank"><img src="/pictures/councilbluffs.png" width="300" alt="Counvil Bluffs Parks"><br>Council Bluffs Parks & Recreation</a></td></tr>
+				<tr><td><a href="http://www.alltrails.com/" target="_blank"><img src="/pictures/alltrails.png" width="300" alt="All Trails"><br>All Trails</a> a great resource for all things hiking</td></tr>
 				</table>
 			</td>
 		</tr>
 	</table>
 	
-	<p id="contact" align="center">
+	<p id="contact" class="center">
 		<a href="mailto:jlocatis@gmail.com">Contact Me!</a>
 	</p>
 </body>
