--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	
 	<p id="page-title">Get outside and explore!</p>
 	
-	<table align="center">
+	<table class="center">
 		<tr>
 			<td id="navigation">
 				<strong>Navigation</strong><br>
@@ -20,8 +20,8 @@
 				<a href="/external-links.html">External Links</a><br>
 				<a href="/about.html">About This Page</a><br>
 			</td>
-			<td width="600">
-				<p><img src="/pictures/wideshot.jpg" width="600" border="10px"></p>
+			<td class="middle">
+				<p><img src="/pictures/wideshot.jpg" width="600" class="frontimages" alt="Vista #1"></p>
 				
 				<p>The area surrounding Omaha is not as flat and boring as you might think! Often I hear others speak of how they need to "get out of Omaha" to enjoy the outdoors. Typically they talk about needing to head to Colorado or somewhere else close.
 				But there is simply no need for that! I have spent the past several months exploring all the Omaha Metro has to offer in terms of outdoor adventure. From local city parks
@@ -30,12 +30,12 @@
 				<p>I invite you to explore the page as I list my favorite local area parks to visit along with some additional resources. 
 				Beautiful vistas, challenging hills, and peaceful escapes into nature await!</p>
 				
-				<p><img src="/pictures/wideshot2.jpg" width="600" border="10px"></p>
+				<p><img src="/pictures/wideshot2.jpg" width="600" class="frontimages" alt="Vista #2"></p>
 			</td>
 		</tr>
 	</table>
 	
-	<p id="contact" align="center">
+	<p id="contact" class="center">
 		<a href="mailto:jlocatis@gmail.com">Contact Me!</a>
 	</p>
 </body>
