--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
 	
 	<p id="page-title">About Me</p>
 	
-	<table align="center">
+	<table class="center">
 		<tr>
 			<td id="navigation">
 				<strong>Navigation</strong><br>
@@ -20,8 +20,8 @@
 				<a href="/external-links.html">External Links</a><br>
 				<a href="/about.html">About This Page</a><br>
 			</td>
-			<td width="600">
-				<p><img src="/pictures/me.jpg" align="left" width="200">My name is Jamie Locatis, and this fall I made a goal to visit as many parks as possible around the Omaha Metropolitan Area.</p>
+			<td class="middle">
+				<p><img src="/pictures/me.jpg" class="left" width="200" alt="Me!">My name is Jamie Locatis, and this fall I made a goal to visit as many parks as possible around the Omaha Metropolitan Area.</p>
 				<p>My goal was to document the outdoor/hiking potential within the Omaha region. Eventually I plan to start a blog providing more detail into what parks to visit and what trails to hike. For now I hope you enjoy this 
 				small peek into the outdoors surrounding Omaha!</p>
 				<p>All of the pictures used on this page are my own.</p>
@@ -29,7 +29,7 @@
 		</tr>
 	</table>
 	
-	<p id="contact" align="center">
+	<p id="contact" class="center">
 		<a href="mailto:jlocatis@gmail.com">Contact Me!</a>
 	</p>
 </body>
