--- a/areaparks.html
+++ b/areaparks.html
@@ -20,28 +20,13 @@
 				<a href="/external-links.html">External Links</a><br>
 				<a href="/about.html">About This Page</a><br>
 			</td>
-			<td>
-				<td id="areaparks" class="middle">
-					<table>
-				    <tr><strong>Links to my favorite parks surrounding Omaha!</strong></tr>
-				    <tr>
-				        <td><a href="http://www.pottcoconservation.com/parks-and-habitat-areas/hitchcock-nature-center/" target="_blank"><img src="/pictures/hitchcock.jpg" width="250"><br>
-				        Hitchcock Nature Center, IA</a></td>
-				        <td><a href="http://outdoornebraska.gov/ponca/" target="_blank"><img src="/pictures/ponca.jpg" width="250"><br>
-				        Ponca State Park, NE</a></td>
-				    </tr>
-				    <tr>
-				        <td><a href="http://outdoornebraska.gov/platteriver/" target="_blank"><img src="/pictures/platteriver.jpg" width="250"><br>
-				        Platte River State Park, NE</a></td>
-				        <td><a href="http://www.iowadnr.gov/Places-to-Go/State-Parks-Rec-Areas/Iowas-State-Parks/ParkDetails/ParkID/610131" target="_blank"><img src="/pictures/waubonsie.jpg" width="250"><br>
-				        Waubonsie State Park, IA</a></td>
-				    </tr>
-				    <tr>
-				        <td><a href="http://www.iowadnr.gov/Places-to-Go/State-Parks-Rec-Areas/Iowas-State-Parks/ParkDetails/ParkID/610160" target="_blank"><img src="/pictures/preparation.jpg" width="250"><br>
-				        Preparation Canyon State Park, IA</a></td>
-				    </tr>
-					</table>
-				</td>
+			<td id="areaparks" class="middle">
+				<strong>Links to my favorite parks surrounding Omaha!</strong><br><br>
+				<a href="http://www.pottcoconservation.com/parks-and-habitat-areas/hitchcock-nature-center/" target="_blank"><img src="/pictures/hitchcock.jpg" width="250" alt="Hitchcock"><br>Hitchcock Nature Center, IA</a><br>
+				<a href="http://outdoornebraska.gov/ponca/" target="_blank"><img src="/pictures/ponca.jpg" width="250" alt="Ponca"><br>Ponca State Park, NE</a><br>
+				<a href="http://outdoornebraska.gov/platteriver/" target="_blank"><img src="/pictures/platteriver.jpg" width="250" alt="Platte River"><br>Platte River State Park, NE</a><br>
+				<a href="http://www.iowadnr.gov/Places-to-Go/State-Parks-Rec-Areas/Iowas-State-Parks/ParkDetails/ParkID/610131" target="_blank"><img src="/pictures/waubonsie.jpg" width="250" alt="Waubonsie"><br>Waubonsie State Park, IA</a><br>
+				<a href="http://www.iowadnr.gov/Places-to-Go/State-Parks-Rec-Areas/Iowas-State-Parks/ParkDetails/ParkID/610160" target="_blank"><img src="/pictures/preparation.jpg" width="250" alt="Preparation"><br>Preparation Canyon State Park, IA</a><br>
 			</td>
 		</tr>
 	</table>
