Added PHP menu/header/footer. Also fixed a few cosmetic issues (tables).

--- a/oldhtml/index.html
+++ b/oldhtml/index.html
@@ -14,11 +14,7 @@
 	<table class="center">
 		<tr>
 			<td id="navigation">
-				<strong>Navigation</strong><br>
-				<a href="/index.html">Home</a><br>
-				<a href="/areaparks.html">Area Parks</a><br>
-				<a href="/external-links.html">External Links</a><br>
-				<a href="/about.html">About This Page</a><br>
+				<?php include("/menu.php"); ?>
 			</td>
 			<td class="middle">
 				<p><img src="/pictures/wideshot.jpg" width="600" class="frontimages" alt="Vista #1"></p>
