--- a/oldhtml/about.html
+++ b/oldhtml/about.html
@@ -12,25 +12,23 @@
 	<p id="page-title">About Me</p>
 	
 	<table class="center">
-		<tr>
-			<td id="navigation">
-				<strong>Navigation</strong><br>
-				<a href="/index.html">Home</a><br>
-				<a href="/areaparks.html">Area Parks</a><br>
-				<a href="/external-links.html">External Links</a><br>
-				<a href="/about.html">About This Page</a><br>
-			</td>
-			<td class="middle">
-				<p><img src="/pictures/me.jpg" class="left" width="200" alt="Me!">My name is Jamie Locatis, and this fall I made a goal to visit as many parks as possible around the Omaha Metropolitan Area.</p>
-				<p>My goal was to document the outdoor/hiking potential within the Omaha region. Eventually I plan to start a blog providing more detail into what parks to visit and what trails to hike. For now I hope you enjoy this 
-				small peek into the outdoors surrounding Omaha!</p>
-				<p>All of the pictures used on this page are my own.</p>
-			</td>
-		</tr>
+		<tbody>
+			<tr>
+				<td id="navigation">
+					<strong>Navigation</strong><br>
+					<a href="/index.html">Home</a><br>
+					<a href="/areaparks.html">Area Parks</a><br>
+					<a href="/external-links.html">External Links</a><br>
+					<a href="/about.html">About This Page</a><br>
+				</td>
+				<td class="middle">
+					<p><img src="/pictures/me.jpg" class="left" width="200" alt="Me!">My name is Jamie Locatis, and this fall I made a goal to visit as many parks as possible around the Omaha Metropolitan Area.</p>
+					<p>My goal was to document the outdoor/hiking potential within the Omaha region. Eventually I plan to start a blog providing more detail into what parks to visit and what trails to hike. For now I hope you enjoy this 
+					small peek into the outdoors surrounding Omaha!</p>
+					<p>All of the pictures used on this page are my own.</p>
+				</td>
+			</tr>
+		</tbody>
 	</table>
 	
-	<p id="contact" class="center">
-		<a href="mailto:jlocatis@gmail.com">Contact Me!</a>
-	</p>
-</body>
-</html>
+<?php include('footer.php' ?>)
